--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -34,13 +34,19 @@
         <div class="container-narrow">
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
           <ul class="nav">
+              <li><a href="{{ BASE_PATH }}">Home</a></li>
               <li><a href="{{ BASE_PATH }}/pages/about.html">about</a></li>
+              <li><a href="{{ BASE_PATH }}/assignments.html">Projects</a></li>
+              <!--
+
               <li><a href="{{ BASE_PATH }}/pages/assignments.html">assignments</a></li>
               <li><a href="{{ BASE_PATH }}/pages/pubs.html">publications</a></li>
               <li><a href="{{ BASE_PATH }}/pages/talks.html">talks</a></li>
               <li><a href="{{ BASE_PATH }}/pages/teaching.html">teaching</a></li>
+
               <li><a href="{{ BASE_PATH }}/pages/software.html">toolkit</a></li>
               <li><a href="{{ BASE_PATH }}/pages/resources.html">resources</a></li>
+            -->
           </ul>
         </div>
       </div>
