--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -37,9 +37,9 @@
               <li><a href="{{ BASE_PATH }}">Home</a></li>
               <li><a href="{{ BASE_PATH }}/pages/about.html">about</a></li>
               <li><a href="{{ BASE_PATH }}/assignments.html">Projects</a></li>
-              <!--
 
-              <li><a href="{{ BASE_PATH }}/pages/assignments.html">assignments</a></li>
+              <li><a href="{{ BASE_PATH }}/New_model/personwb_eg.html">test</a></li>
+              <!--
               <li><a href="{{ BASE_PATH }}/pages/pubs.html">publications</a></li>
               <li><a href="{{ BASE_PATH }}/pages/talks.html">talks</a></li>
               <li><a href="{{ BASE_PATH }}/pages/teaching.html">teaching</a></li>
