--- a/New_model/blog.css
+++ b/New_model/blog.css
@@ -108,7 +108,7 @@ button{
     height: 900px;
 }
 .one{
-    background-color: ##cdcbcb;
+    background-color: #8b8989;
     width: 100%;
     height: 300px;
 }
