--- a/New_model/blog.css
+++ b/New_model/blog.css
@@ -88,9 +88,10 @@ button{
 }
 .green-area .hr{
     background: #056470;
-    width: 50%;
+    width: 100%;
     margin-top: 22px;
     margin-bottom: 22px;
+
 }
 .green-area .tubiao .item{
     display: inline-block;
@@ -105,6 +106,8 @@ button{
     width: 200px;
     height: 300px;
     float: left;
+    margin-top: 0;
+    margin-left: 0;
 }
 
 .gray-area{
