--- a/New_model/blog.css
+++ b/New_model/blog.css
@@ -106,8 +106,8 @@ button{
     width: 200px;
     height: 300px;
     float: left;
-    margin-top: 0;
-    margin-left: 0;
+    margin-top: 10px;
+    margin-left: 10px;
 }
 
 .gray-area{
