--- a/New_model/blog.css
+++ b/New_model/blog.css
@@ -73,7 +73,7 @@ button{
 #banner .center1 .more a{
     text-decoration: none;
     color: #000000;
-    font-size: 18px;
+    font-size: 30px;
 }
 /*内容*/
 .biaoti{
@@ -111,12 +111,12 @@ button{
 }
 
 .gray-area{
-    background: #4a4949;
+    background: #b6b4b4;
     width: 100%;
     height: 900px;
 }
 .one{
-    background-color: #8b8989;
+    background-color: #b6b4b4;
     width: 100%;
     height: 300px;
 }
