--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -36,7 +36,8 @@
           <ul class="nav">
               <li><a href="{{ BASE_PATH }}">Home</a></li>
               <li><a href="{{ BASE_PATH }}/pages/about.html">about</a></li>
-              <li><a href="{{ BASE_PATH }}/assignments.html">Projects</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/about2.html">Projects</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/resources.html">resources</a></li>
 
               <li><a href="{{ BASE_PATH }}/New_model/personwb_eg.html">test</a></li>
               <!--
@@ -45,7 +46,7 @@
               <li><a href="{{ BASE_PATH }}/pages/teaching.html">teaching</a></li>
 
               <li><a href="{{ BASE_PATH }}/pages/software.html">toolkit</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/resources.html">resources</a></li>
+
             -->
           </ul>
         </div>
