--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -36,7 +36,7 @@
           <ul class="nav">
               <li><a href="{{ BASE_PATH }}">Home</a></li>
               <li><a href="{{ BASE_PATH }}/pages/about.html">about</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/about2.html">Projects</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/about2.html">assigment</a></li>
               <li><a href="{{ BASE_PATH }}/pages/resources.html">resources</a></li>
 
               <li><a href="{{ BASE_PATH }}/New_model/personwb_eg.html">test</a></li>
