--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -35,11 +35,11 @@
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
           <ul class="nav">
               <li><a href="{{ BASE_PATH }}">Home</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/about.html">about</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/about2.html">assigment</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/resources.html">resources</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/about.html">About</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/about2.html">Assigment</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/resources.html">Resources</a></li>
 
-              <li><a href="{{ BASE_PATH }}/New_model/personwb_eg.html">test</a></li>
+              <li><a href="{{ BASE_PATH }}/New_model/personwb_eg.html">Test</a></li>
               <!--
               <li><a href="{{ BASE_PATH }}/pages/pubs.html">publications</a></li>
               <li><a href="{{ BASE_PATH }}/pages/talks.html">talks</a></li>
