--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -35,12 +35,12 @@
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
           <ul class="nav">
               <li><a href="{{ BASE_PATH }}">Home</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/about.html">About</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/about2.html">Assigment</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/resources.html">Resources</a></li>
-
-              <li><a href="{{ BASE_PATH }}/New_model/personwb_eg.html">Test</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/Resume_LihuaPei_0903.pdf">Resume</a></li>
+              <li><a href="https://github.com/LihuaPeiNeo">Github</a></li>
+              <li><a href="www.linkedin.com/in/lihua-pei-4b5792165">Linkedin</a></li>
               <!--
+              <li><a href="{{ BASE_PATH }}/New_model/personwb_eg.html">Test</a></li>
+              
               <li><a href="{{ BASE_PATH }}/pages/pubs.html">publications</a></li>
               <li><a href="{{ BASE_PATH }}/pages/talks.html">talks</a></li>
               <li><a href="{{ BASE_PATH }}/pages/teaching.html">teaching</a></li>
