--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -37,7 +37,7 @@
               <li><a href="{{ BASE_PATH }}">Home</a></li>
               <li><a href="{{ BASE_PATH }}/Resume/Resume_LihuaPei_0903.pdf">Resume</a></li>
               <li><a href="https://github.com/LihuaPeiNeo">Github</a></li>
-              <li><a href="www.linkedin.com/in/lihua-pei-4b5792165">Linkedin</a></li>
+              <li><a href="https://www.linkedin.com/in/lihua-pei-4b5792165/">Linkedin</a></li>
               <!--
               <li><a href="{{ BASE_PATH }}/New_model/personwb_eg.html">Test</a></li>
               
